==> che1111y/Lab/F407_esp8266/Hardware/WIFI/bsp_esp8266.c <==
#include "bsp_esp8266.h"
#include <stdio.h>
#include <string.h>
#include <stdbool.h>
#include "delay.h"
#include "stm32f4xx_hal_uart.h"

static void ESP8266_GPIO_Config ( void )
{
	/*定义一个GPIO_InitTypeDef类型的结构体*/
	GPIO_InitTypeDef GPIO_InitStructure;


	/* 配置 CH_PD 引脚*/
	 macESP8266_CH_PD_CLK_ENABLE();
											   
	GPIO_InitStructure.Pin = macESP8266_CH_PD_PIN;	

    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
   
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH; 

	HAL_GPIO_Init ( macESP8266_CH_PD_PORT, & GPIO_InitStructure );	 

	
	/* 配置 RST 引脚*/
	macESP8266_RST_CLK_ENABLE();
											   
	GPIO_InitStructure.Pin = macESP8266_RST_PIN;	

	HAL_GPIO_Init ( macESP8266_RST_PORT, & GPIO_InitStructure );	 


}

static void ESP8266_USART_Config ( void )
{
   
	/* USART3 mode config */
    Uart3Handle.Instance          = macESP8266_USARTx;
    
    Uart3Handle.Init.BaudRate     = macESP8266_USART_BAUD_RATE;
    Uart3Handle.Init.WordLength   = UART_WORDLENGTH_8B;
    Uart3Handle.Init.StopBits     = UART_STOPBITS_1;
    Uart3Handle.Init.Parity       = UART_PARITY_NONE;
    Uart3Handle.Init.Mode         = UART_MODE_TX_RX;
    Uart3Handle.Init.HwFlowCtl    = UART_HWCONTROL_NONE;
    Uart3Handle.Init.OverSampling = UART_OVERSAMPLING_16;
    
    HAL_UART_Init(&Uart3Handle);
	
	/* 中断配置 */
	ESP8266_USART_NVIC_Configuration ();
    
    // __HAL_UART_ENABLE_IT ( &Uart3Handle, USART_IT_RXNE); //使能串口接收中断 
	// __HAL_UART_ENABLE_IT ( &Uart3Handle, USART_IT_IDLE); //使能串口总线空闲中断 	



}

static void ESP8266_USART_NVIC_Configuration ( void )
{
//	HAL_NVIC_SetPriorityGrouping(macNVIC_PriorityGroup_x);
	/* Configure the NVIC Preemption Priority Bits */  
    HAL_NVIC_SetPriority(macESP8266_USART_IRQ,0,0);
    HAL_NVIC_EnableIRQ(macESP8266_USART_IRQ);

}
